syntax = "proto3";

import "google/protobuf/empty.proto";

package chatterish;

service AuthService {
    rpc SignUserIn(UserCredentials) returns(SignInResponse) {};
    rpc SignUserUp(User) returns (google.protobuf.Empty) {};
    rpc CheckToken(Token) returns (google.protobuf.Empty) {};
    rpc RefreshToken(Token) returns (Token) {};
}

service UserService {
    rpc UpdatePassword(UpdatePasswordRequest) returns (UpdateResponse) {};
    rpc UpdateEmail(UpdateEmailRequest) returns (UpdateResponse) {};
    rpc AddUserToMatchPool(Username) returns (google.protobuf.Empty) {};
    rpc RemoveUserFromMatchPool(Username) returns (google.protobuf.Empty) {};
    rpc MatchUser(Username) returns (Match) {};
    rpc GetMatches(Username) returns (GetMatchesResponse) {};
}

service ChatService {
    rpc ReceiveMessage(Username) returns (stream ChatMessage) {};
    rpc SendMessage(ChatMessage) returns (google.protobuf.Empty) {};
}

message UpdatePasswordRequest {
    string password = 1;
    string confirmPassword = 2;
    string token = 3;
}

message UpdateResponse {
    User user = 1;
    string token = 2;
}

message UpdateEmailRequest {
    string email = 1;
    string token = 2;
}

message User {
    string username = 1;
    string password = 2;
    string email = 3;
    string birthdate = 4;
    string nationality = 5;
    string confirmPsw = 6;
}

message SignInResponse {
    string token = 1;
    User user = 2;
}

message UserCredentials {
    string usernameOrEmail = 1;
    string password = 2; 
}

message Token {
    string token = 1;
}

message Username {
    string username = 1;
}

message ChatMessage {
    string msg = 1;
    string sender = 2;
    string receiver = 3;
    string time = 4;
}

message MatchersCount {
    int32 currentlyMatchingUsersCount = 1;
}

message Match {
    string sender = 1;
    string receiver = 2;
}

message MatchType {
    string username = 1;
    string date = 2;
}

message GetMatchesResponse {
    repeated MatchType matches = 1;
}